Fix bug: delete product modal no longer covered by slideshow images

--- a/frontend/src/components/pages/adminDashboard/products/ProductComponent.scss
+++ b/frontend/src/components/pages/adminDashboard/products/ProductComponent.scss
@@ -46,3 +46,7 @@
     margin-top: 24px;
   }
 }
+
+.ReactModal__Overlay.ReactModal__Overlay--after-open {
+  z-index: 1000;
+}
